--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -13,7 +13,7 @@
   <ion-list>
     <ion-item *ngFor="let item of items" [routerLink]="['/update-item', item.id]">
       <ion-label>
-        {{ item.title }}
+        {{ item.name }}
       </ion-label>
     </ion-item>
   </ion-list>
