--- a/src/app/pages/update-item/update-item.page.html
+++ b/src/app/pages/update-item/update-item.page.html
@@ -11,11 +11,11 @@
   <form [formGroup]="edit_item_form" (ngSubmit)="updateItem(edit_item_form.value)">
     <ion-item>
       <ion-label color="primary" position="floating">Title</ion-label>
-      <ion-input type="text" formControlName="title" required></ion-input>
+      <ion-input type="text" formControlName="name" required></ion-input>
     </ion-item>
     <ion-item>
       <ion-label color="primary" position="floating">Description</ion-label>
-      <ion-input type="text" formControlName="description" required></ion-input>
+      <ion-input type="text" formControlName="phone" required></ion-input>
     </ion-item>
     <ion-button class="submit-btn" expand="block" type="submit" [disabled]="!edit_item_form.valid">Update</ion-button>
   </form>
